--- a/pyUC.ini
+++ b/pyUC.ini
@@ -33,6 +33,8 @@ voxEnable = 0               ; Enable = 1, disable = 0
 voxThreshold = 200          ; This seems to be a good value for me
 voxDelay = 50               ; 50 samples (which is 1 second)
 aslMode = 0                 ; For VERY limited use with chan_usrp (ASL experimental).
+api = 123                   ; Brandmeister API Key
+
 
 # This section defines the talkgroups used when pyUC is in DMR mode
 [DMR]
